--- a/index.html
+++ b/index.html
@@ -105,10 +105,9 @@ h1 {
   <img src="photo11.jpg">
 </div>
 
-<audio id="music" loop>
-  <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mp3">
+<audio controls loop>
+  <source src="https://raw.githubusercontent.com/amitrajfintech-star/muskan-birthday/main/song.mp3" type="audio/mp3">
 </audio>
-
 <script>
 const intro = document.getElementById("intro");
 const btn = document.getElementById("enterBtn");
