--- a/index.html
+++ b/index.html
@@ -3,157 +3,219 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Birthday Muskan ❤️</title>
+<title>For Muskan ❤️</title>
 
 <style>
 body {
-  margin:0;
-  font-family: 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg,#000000,#1a001a,#330033);
-  color:white;
-  text-align:center;
-  overflow-x:hidden;
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: radial-gradient(circle at top, #1a001f, #000);
+    color: white;
+    overflow: hidden;
 }
 
+/* INTRO SCREEN */
 #intro {
-  position:fixed;
-  width:100%;
-  height:100%;
-  background:black;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-  z-index:10;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 10;
 }
 
-#enterBtn {
-  padding:15px 30px;
-  font-size:20px;
-  background:red;
-  color:white;
-  border:none;
-  border-radius:30px;
-  cursor:pointer;
-  transition:0.3s;
+#intro h1 {
+    font-size: 2em;
+    animation: fade 2s infinite alternate;
 }
 
-#enterBtn:hover {
-  transform:scale(1.1);
-  background:pink;
+@keyframes fade {
+    from {opacity: 0.4;}
+    to {opacity: 1;}
 }
 
-h1 {
-  margin-top:20px;
-  font-size:3em;
-  animation:glow 2s infinite alternate;
+/* LOCK */
+#lock {
+    display: none;
+    flex-direction: column;
+    align-items: center;
 }
 
-@keyframes glow {
-  from { text-shadow:0 0 10px pink; }
-  to { text-shadow:0 0 30px red; }
+input {
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
 }
 
-.message {
-  font-size:1.3em;
-  margin:20px;
-  min-height:80px;
+button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    border-radius: 20px;
+    border: none;
+    background: pink;
+    cursor: pointer;
 }
 
-.slideshow {
-  max-width:300px;
-  margin:20px auto;
-  border-radius:20px;
-  overflow:hidden;
+/* MAIN */
+#main {
+    display: none;
+    text-align: center;
+    padding: 20px;
 }
 
-.slideshow img {
-  width:100%;
-  display:none;
-  border-radius:20px;
+.card {
+    backdrop-filter: blur(20px);
+    background: rgba(255,255,255,0.08);
+    padding: 20px;
+    border-radius: 25px;
+    max-width: 400px;
+    margin: auto;
 }
 
+img {
+    width: 100%;
+    border-radius: 20px;
+    margin-top: 15px;
+    transition: opacity 1s;
+}
+
+/* typing */
+#text {
+    min-height: 50px;
+}
+
+/* letter popup */
+#popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background: rgba(0,0,0,0.9);
+    padding: 20px;
+    border-radius: 20px;
+    width: 80%;
+}
+
+/* hearts */
 .heart {
-  position:fixed;
-  bottom:0;
-  color:pink;
-  animation:floatUp 5s linear infinite;
+    position: absolute;
+    color: rgba(255,105,180,0.6);
+    animation: floatUp 6s linear infinite;
 }
 
 @keyframes floatUp {
-  0% {transform:translateY(0);opacity:1;}
-  100% {transform:translateY(-100vh);opacity:0;}
+    from {transform: translateY(100vh);}
+    to {transform: translateY(-10vh);}
 }
 </style>
 </head>
 
 <body>
 
-<div id="intro">
-  <h2>For Someone Very Special ❤️</h2>
-  <button id="enterBtn">Click to Enter 💖</button>
+<!-- INTRO -->
+<div id="intro" onclick="start()">
+    <h1>Tap to Open Something Special 💖</h1>
 </div>
 
-<h1>Happy Birthday Muskan ❤️</h1>
-
-<div class="message" id="typing"></div>
-
-<div class="slideshow">
-  <img src="photo1.jpg">
-  <img src="photo2.jpg">
-  <img src="photo10.jpg">
-  <img src="photo11.jpg">
+<!-- LOCK -->
+<div id="lock">
+    <h2>Enter Something Only You Know 💭</h2>
+    <input type="password" id="pass">
+    <button onclick="unlock()">Enter</button>
 </div>
 
-<audio controls loop>
-  <source src="https://raw.githubusercontent.com/amitrajfintech-star/muskan-birthday/main/song.mp3" type="audio/mp3">
+<!-- MAIN -->
+<div id="main">
+    <div class="card">
+        <h1>Happy Birthday Muskan ❤️</h1>
+        <div id="text"></div>
+
+        <img id="slide" src="photo1.jpg">
+
+        <button onclick="openLetter()">Open My Heart 💌</button>
+    </div>
+</div>
+
+<!-- POPUP -->
+<div id="popup">
+    <p>
+    Muskan ❤️<br><br>
+    From the day you came into my life, everything changed.<br>
+    You are my happiness, my safe place, my everything 💖<br><br>
+    I don’t just love you… I choose you every single day.<br><br>
+    Happy Birthday my love 🎂✨
+    </p>
+    <button onclick="closeLetter()">Close</button>
+</div>
+
+<audio id="music" loop>
+  <source src="song.mp3" type="audio/mpeg">
 </audio>
+
 <script>
-const intro = document.getElementById("intro");
-const btn = document.getElementById("enterBtn");
-const music = document.getElementById("music");
-
-btn.onclick = function() {
-  intro.style.display="none";
-  music.play();
-  startHearts();
+// start intro
+function start(){
+    document.getElementById("intro").style.display="none";
+    document.getElementById("lock").style.display="flex";
+    document.getElementById("music").play();
 }
 
-const text = "Happy Birthday My Love ❤️\nYou are the most beautiful part of my life.\nEvery moment with you feels magical.\nI promise to always stand by you.\nI love you forever Muskan 💖";
+// unlock
+function unlock(){
+    if(document.getElementById("pass").value==="muskan"){
+        document.getElementById("lock").style.display="none";
+        document.getElementById("main").style.display="block";
+    } else {
+        alert("Wrong 😜");
+    }
+}
+
+// typing
+let msg="Muskan, you are the most beautiful part of my life 💖";
 let i=0;
-
-function typeWriter(){
-  if(i<text.length){
-    document.getElementById("typing").innerHTML += text.charAt(i);
-    i++;
-    setTimeout(typeWriter,40);
-  }
+function type(){
+    if(i<msg.length){
+        document.getElementById("text").innerHTML+=msg[i];
+        i++;
+        setTimeout(type,50);
+    }
 }
-typeWriter();
+type();
 
-function startHearts(){
-  setInterval(()=>{
-    const heart=document.createElement("div");
-    heart.className="heart";
-    heart.innerHTML="💖";
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*20+10)+"px";
-    document.body.appendChild(heart);
-    setTimeout(()=>heart.remove(),5000);
-  },300);
+// slideshow
+let imgs=["photo1.jpg","photo2.jpg","photo3.jpg","photo4.jpg","photo5.jpg","photo6.jpg","photo7.jpg","photo8.jpg","photo9.jpg","photo10.jpg","photo11.jpg","photo12.jpg","photo13.jpg","photo14.jpg","photo15.jpg",];
+let index=0;
+setInterval(()=>{
+    index=(index+1)%imgs.length;
+    let img=document.getElementById("slide");
+    img.style.opacity=0;
+    setTimeout(()=>{
+        img.src=imgs[index];
+        img.style.opacity=1;
+    },500);
+},3000);
+
+// popup
+function openLetter(){
+    document.getElementById("popup").style.display="block";
+}
+function closeLetter(){
+    document.getElementById("popup").style.display="none";
 }
 
-let slideIndex=0;
-const slides=document.querySelectorAll(".slideshow img");
-
-function showSlides(){
-  slides.forEach(img=>img.style.display="none");
-  slideIndex++;
-  if(slideIndex>slides.length){slideIndex=1}
-  slides[slideIndex-1].style.display="block";
-  setTimeout(showSlides,2500);
-}
-showSlides();
+// hearts
+setInterval(()=>{
+    let h=document.createElement("div");
+    h.className="heart";
+    h.innerHTML="💖";
+    h.style.left=Math.random()*100+"vw";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),6000);
+},500);
 </script>
 
 </body>
